# open-rag-pipeline

./: .env.example  README.md  pyproject.toml
open_rag_pipeline/: __init__.py  config.py  exceptions.py
open_rag_pipeline/chunking/: __init__.py  base.py  config.py  recursive_splitter.py
open_rag_pipeline/cli/: __init__.py  commands.py
open_rag_pipeline/embeddings/: __init__.py  base.py  cohere_embedding.py  factory.py  local_embedding.py  openai_embedding.py
open_rag_pipeline/loaders/: __init__.py  base.py  docx_loader.py  factory.py  html_loader.py  pdf_loader.py  txt_loader.py
open_rag_pipeline/pipeline/: __init__.py  batch_processor.py  ingestion_pipeline.py  query_pipeline.py  registry.py
open_rag_pipeline/utils/: __init__.py  file_utils.py  logging_utils.py  metadata.py  retry.py
open_rag_pipeline/vector_stores/: __init__.py  base.py  chroma_store.py  factory.py  milvus_store.py  qdrant_store.py
tests/: __init__.py  test_chunking.py  test_embeddings.py  test_loaders.py  test_pipeline.py  test_registry.py  test_vector_stores.py
